--- a/about.html
+++ b/about.html
@@ -19,6 +19,8 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <div id = "page-container">
+            <div id = "content-wrap">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
               <div class="navbar-header">
@@ -27,12 +29,12 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>                        
                 </button>
-                <a class="navbar-brand" href="#">Memento Mori</a>
+                <a class="navbar-brand" href="home.html">Memento Mori</a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                  <li class="active"><a href="home.html">Home</a></li>
-                  <li><a href="#">About</a></li>
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -44,9 +46,12 @@
 
           <h1 class = "text-center">About</h1>
 
-          <p> about....</p>
-          <footer class="container-fluid text-center">
-            <a href = "#">Email: Cult@Gmail.com</a>
+          <p class = "text-center"> I am in your walls</p>
+
+        </div>
+          <footer id = "footer" class="container-fluid text-center">
+            <a href = "contact.html">Contact</a> 
           </footer>
+        </div>
     </body>
 </html>
