--- a/home.html
+++ b/home.html
@@ -181,7 +181,7 @@
                               <!--<img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" style="width: 100px;height:100px;">-->
                             </div>
                             <div class="col-sm-9">
-                              <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
+                              <p>Best cult</p>
                               <small>Someone famous</small>
                             </div>
                           </div>
@@ -195,7 +195,7 @@
                               <img class="img-circle" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/NeonDemon.jpg/640px-NeonDemon.jpg" style="width: 100px;height:100px;">
                             </div>
                             <div class="col-sm-9">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p>
+                              <p>Totaly real. Five stars </p>
                               <small>Someone famous</small>
                             </div>
                           </div>
@@ -209,7 +209,7 @@
                               <img class="img-circle" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/NeonDemon.jpg/640px-NeonDemon.jpg" style="width: 100px;height:100px;">
                             </div>
                             <div class="col-sm-9">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan. Sed ultricies commodo tortor, eu pretium mauris.</p>
+                              <p>Definitly not scam.</p>
                               <small>Someone famous</small>
                             </div>
                           </div>
@@ -222,6 +222,15 @@
                   </div>                          
                 </div>
               </div>
+            </div>
+            <div class = "container">
+              <h3>dasadsgdjk</h3>
+              <div class="row">
+                <div class="col-xs-12 col-sm-6"><p>Totaly real cult, completly legitimate orgnization not made up. Join so you can say ur in cult becuase its a goood conversation starter  guess or because you don't want people talking to you idk. Just funny lol. dasjh fkadjs adsh aiuhr niaoeuhafuidsh fjahrui hauih firuo haiuh ifnari uhaif hairh ah uiofhar hfuiahf iru fhuarh iur hiuahf iuah</p></div>
+                <div class="col-xs-12 col-sm-6"><p>Lorem ipsum dolor sit amet. Qui facilis voluptatem in voluptas voluptate non voluptas aperiam et architecto atque At Quis autem ea exercitationem necessitatibus eos officiis enim! Non maiores autem et facere laboriosam eos incidunt placeat ab voluptates corrupti. Ut enim amet ea mollitia harum est nesciunt totam sed rerum illum et iure voluptates id veniam nesciunt et vero tempore. Qui labore iusto sed odio neque rem dolorem Quis qui facere quia est reprehenderit fugit At velit accusantium aut dolores consequatur. </p><p>Vel inventore minus aut nostrum nisi cum galisum quod non consequuntur commodi! Qui illo alias qui Quis nesciunt est laborum mollitia rem itaque dolore. Sed quis alias cum internos nulla sed assumenda dolores hic reprehenderit galisum ab minima magnam non adipisci consequatur. Ex velit quibusdam in reprehenderit exercitationem et ipsa ipsa. </p><p>Non neque doloremque 33 maxime eius est quibusdam delectus. Ut aliquam nesciunt ut velit nostrum id consequatur distinctio aut officiis deleniti ut impedit ipsam sit corporis maiores? Eos sint quisquam ea vitae consectetur aut laudantium maiores et nemo numquam non tempora similique ut perspiciatis debitis.</p></div>
+            </div>
+                <br>
+                <br>
             </div>
     
               <footer id = "footer" class="container-fluid text-center">
